First HTTP test works.

--- a/SOFTWARE/Core/HTTP/fs/index.html
+++ b/SOFTWARE/Core/HTTP/fs/index.html
@@ -15,7 +15,8 @@
             flex-grow: 1;
         }
         .top {
-            height: 10%;
+            height: 6%;
+            
         }
         .bottom {
             height: 100%;
@@ -39,10 +40,10 @@
       .site-link {
       display: block;
       padding: 10px;
-      margin: 5px 0;
+      margin: 10px 5px;
       background-color: #e9ecef;
       color: #000;
-      text-decoration: none;
+      text-decoration: solid;
       border-radius: 4px;
       text-align: center;
      }
