--- a/SOFTWARE/Core/HTTP/fs/top.html
+++ b/SOFTWARE/Core/HTTP/fs/top.html
@@ -13,7 +13,7 @@
         height: 100vh;
         background-color: #000000;
         color: #fff;
-        font-size: medium;
+        font-size: x-small;
     }
     
   </style>
