--- a/SOFTWARE/Core/HTTP/fs/support.html
+++ b/SOFTWARE/Core/HTTP/fs/support.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <style>
+        body{
+            margin-top: 40px;
+            margin-left: 40px;
+        }
+    </style>
 </head>
-<body>
-    <h1>SUPPORT TBD</h1>
 
-</body>
+    <body>
+        <h1>SUPPORT TBD</h1>
+
+    </body>
 </html>
