--- a/SOFTWARE/Core/HTTP/fs/index.html
+++ b/SOFTWARE/Core/HTTP/fs/index.html
@@ -57,7 +57,7 @@
      }
      .left-frame {
             background-color: inherit;
-            width: 110px;
+            width: 130px;
             margin-top: 0px;
             padding: 1px;
             box-shadow: 1px 0 1px rgba(0, 0, 0, 0.1);
@@ -76,9 +76,9 @@
     <div class="row bottom">
         <div class="left-frame">
             <a href="#" class="site-link" onclick="newSrc('home.html')">HOME</a>
-            <a href="#" class="site-link" onclick="newSrc('setup.html')">SETUP</a>
-            <a href="#" class="site-link" onclick="newSrc('support.html')">SUPPORT</a>
-            <a href="#" class="site-link" onclick="newSrc('help.html')">HELP</a>
+            <a href="#" class="site-link" onclick="newSrc('setup.html')">NETWORK SETTING</a>
+            <a href="#" class="site-link" onclick="newSrc('support.html')">DEVICE CONTROL</a>
+            <a href="#" class="site-link" onclick="newSrc('help.html')">MANUAL</a>
         </div>
         <div class="column right">
             <iframe src="home.html" id="MainFrame"></iframe>
