HTTP code development

--- a/SOFTWARE/Core/HTTP/fs/home.html
+++ b/SOFTWARE/Core/HTTP/fs/home.html
@@ -77,7 +77,7 @@
 </script>
 
     <body onload = "onload()">
-        <h2>   DEVICE INFORMATION</h2>
+        <h2>INSTRUMENT INFORMATION</h2>
         <table>
             <tbody style="max-width: 100px">
                 <tr>
@@ -126,7 +126,7 @@
             
         </table>
         <p style="margin-bottom: 50px;"></p>
-        <h2>SPECIAL FUNCTIONS INFORMATION</h2>
+        <h2>ADDITIONAL FUNCTIONS INFORMATION</h2>
         <table>
             <tbody >
                 <tr>
