--- a/SOFTWARE/Core/HTTP/fs/index.html
+++ b/SOFTWARE/Core/HTTP/fs/index.html
@@ -57,7 +57,7 @@
      }
      .left-frame {
             background-color: inherit;
-            width: 130px;
+            width: 140px;
             margin-top: 0px;
             padding: 1px;
             box-shadow: 1px 0 1px rgba(0, 0, 0, 0.1);
@@ -77,7 +77,7 @@
         <div class="left-frame">
             <a href="#" class="site-link" onclick="newSrc('home.html')">HOME</a>
             <a href="#" class="site-link" onclick="newSrc('setup.html')">NETWORK SETTING</a>
-            <a href="#" class="site-link" onclick="newSrc('support.html')">DEVICE CONTROL</a>
+            <a href="#" class="site-link" onclick="newSrc('support.html')">INSTRUMENT CONTROL</a>
             <a href="#" class="site-link" onclick="newSrc('help.html')">MANUAL</a>
         </div>
         <div class="column right">
