--- a/SOFTWARE/Core/HTTP/fs/home.html
+++ b/SOFTWARE/Core/HTTP/fs/home.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE11" />
     <meta charset="UTF-8">
-    
+
     <style>
         body{
             margin-top: 30px;
