--- a/SOFTWARE/Core/HTTP/fs/index.html
+++ b/SOFTWARE/Core/HTTP/fs/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE11" />
     <meta charset="UTF-8">
     <title>Test</title>
     <style>
